<resources>
    <string name="app_name">LoveMovie</string>
    <string name="feedback_hint2">用的不爽，有好的想法，请大声说出来...</string>
    <string name="cinema_bind_mobile_title">输入手机号</string>
    <string name="group_detail_buy_btn">立即抢购</string>
    <string name="group_detail_desc_txt">兑换说明</string>
    <string name="yuan">元</string>
    <string name="data_loading">loading...</string>
    <string name="loading_error_tips">请尝试轻触屏幕重新加载</string>
    <string name="no_data">暂无数据</string>
    <string name="phone_number">手机号码</string>
    <string name="order_payment_total_txt">总价</string>
    <string name="order_payment_confirm_btn_txt">确认支付</string>
    <string name="pay_type">支付方式</string>
    <string name="login_input_mobile">请输入手机号</string>
    <string name="number">数量</string>
    <string name="my_watched">看过的电影</string>
    <string name="my_want_watch">想看的电影</string>
    <string name="my_setting">设置</string>
    <string name="my_vip_code">优惠码VIP通兑</string>
    <string name="my_hongbao_tip">免费领红包</string>
    <string name="my_hongbao">红包</string>
    <string name="my_movie_ticket_comment_tip">待评价</string>
    <string name="my_ticket">我的电影票</string>
    <string name="order_detail_qr_code_tips_big">将二维码放入取票机扫描区</string>
    <string name="order_detail_kind_reminder_2">● 微票儿客服电话：4001 100 100</string>
    <string name="order_detail_kind_reminder_1">● 选座票购买后无法退换，请注意安排时间</string>
    <string name="order_detail_kind_reminder_title">温馨提示：</string>
    <string name="order_detail_number">订单号：</string>
    <string name="order_detail_cinema_title">影院详情：</string>
    <string name="order_detail_problem_guide">现场取票如有问题，请联系影院值班经理，或电话客服：4001-100-100</string>
    <string name="order_detail_delivery">取票方式：</string>
    <string name="order_detail_qr_code_tips">扫一扫，快速出票</string>
    <string name="order_detail_pwd">密码</string>
    <string name="order_detail_exchange_code">兑换码</string>
    <string name="order_detail_fail">出票失败，预计2-10个工作日自动退款</string>
    <string name="layout_clean_cache">清除缓存</string>
    <string name="feedback_title">意见反馈</string>
    <string name="checkversion">检测新版本</string>
    <string name="ll_my_about_we">关 于</string>
    <string name="order_ticket_fail">出票失败</string>
    <string name="order_ticket_fail_blame">都是月亮惹的祸，不要怪小票</string>
    <string name="order_ticket_fail_refund">系统将为你自动办理退款，预计2-10个工作日到账</string>
    <string name="order_ticket_rebuy">重新购买</string>
    <string name="order_ticket_return_home">回到首页</string>
    <string name="pay_result_success_title_txt">您已成功购买</string>
    <string name="pay_result_success_sub_title_txt">通往电影世界的船票</string>
    <string name="pay_result_success_btn_txt">查看订单</string>
    <string name="search_key_word_is_empty">输入影院名字或地址</string>
    <string name="search_button">搜索</string>
    <string name="tips_common_no_data">暂时没有找到相关信息</string>
    <string name="showing">正在热映</string>
    <string name="will_show">即将上映</string>
    <string name="film_detail_want_watch">想看</string>
    <string name="film_detail_remind">收藏</string>
    <string name="film_detail_intro_director">导演：</string>
    <string name="film_detail_intro_actor">演员：</string>
    <string name="film_detail_intro_story">剧情：</string>
    <string name="film_detail_watch_points">精彩看点</string>
    <string name="film_detail_comments_hot_comment">精选评论</string>
    <string name="film_detail_comments_item_comment">评价：</string>
    <string name="film_detail_buxihuan">不喜欢</string>
    <string name="film_detail_my_comment_like_reply_num">%1$d赞 %1$d评论</string>
    <string name="actionbar_title">韩洋出品,必属精品</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="locating">定位中</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="voice_call">[语音通话]</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="title_user_profile">个人资料</string>
    <string name="nickname">昵称</string>
    <string name="setting_nickname">设置昵称</string>
    <string name="dl_ok">确定</string>
    <string name="dl_cancel">取消</string>
    <string name="toast_nick_not_isnull">昵称不能为空！</string>
    <string name="dl_update_nick">更新昵称</string>
    <string name="dl_update_photo">更新头像</string>
    <string name="dl_waiting">请等待...</string>
    <string name="toast_updatenick_success">更新昵称成功!</string>
    <string name="toast_updatenick_fail">更新昵称失败!</string>
    <string name="toast_updatephoto_success">更新头像成功!</string>
    <string name="toast_updatephoto_fail">更新头像失败!</string>
    <string name="toast_no_support">暂不支持！</string>
    <string name="dl_msg_local_upload">本地上传</string>
    <string name="dl_msg_take_photo">拍照上传</string>
    <string name="dl_title_upload_photo">上传头像</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="gorup_not_found">找不到这个群组</string>
    <string name="group_id">群ID</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Change_the_group_name">改变群名称</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="people">人)</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="being_added">正在添加...</string>
    <string name="is_quit_the_group_chat">正在退出群聊...</string>
    <string name="chatting_is_dissolution">正在解散群聊...</string>
    <string name="are_empty_group_of_news">正在清空群消息...</string>
    <string name="is_modify_the_group_name">正在修改群名称...</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="change_the_group_name_failed_please">改变群名称失败，请检查网络或稍后重试</string>
    <string name="Are_moving_to_blacklist">正在移入至黑名单</string>
    <string name="failed_to_move_into">移入黑名单失败,请检查网络或稍后重试</string>
    <string name="Exit_the_group_chat_failure">退出群聊失败:</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失败:</string>
    <string name="Add_group_members_fail">添加群成员失败:</string>
    <string name="Is_unblock">正在解除屏蔽...</string>
    <string name="remove_group_of">解除群屏蔽失败，请检查网络或稍后重试</string>
    <string name="group_is_blocked">正在屏蔽群组...</string>
    <string name="group_of_shielding">群屏蔽失败，请检查网络或稍后重试</string>
    <string name="sure_to_empty_this">确定清空此群的聊天记录吗？</string>
    <string name="The_delete_button_is_clicked">删除按钮被点击</string>
    <string name="Add_a_button_was_clicked">添加按钮被点击</string>
    <string name="not_delete_myself">不能删除自己</string>
    <string name="Are_removed">正在移除...</string>
    <string name="confirm_the_members">确认将此成员加入至此群黑名单?</string>
    <string name="Failed_to_get_group_chat_information">获取群聊信息失败:</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="Request_to_join">请求加入</string>
    <string name="send_the_request_is">发送请求成功，等待群主同意</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Log_uploaded_successfully">日志上传成功</string>
    <string name="Log_Upload_failed">log上传失败</string>
    <string name="button_save">保存</string>
    <string name="select_contacts">选择联系人</string>
    <string name="search_new">搜</string>
    <string name="search_header">搜</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
</resources>