<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_content_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@color/color_title_bar" >

        <ImageView
            android:id="@id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="5.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:paddingTop="5.0dip"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="设置"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_clean_cache"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/selector_common_white_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:layout_weight="1.0"
                android:text="@string/layout_clean_cache"
                android:textColor="@color/c2"
                android:textSize="16.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16.0dip"
                android:background="@drawable/icon_right_allow" />
        </LinearLayout>

        <View style="@style/common_divider_line" />

        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/selector_common_white_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:layout_weight="1.0"
                android:text="@string/feedback_title"
                android:textColor="@color/c2"
                android:textSize="16.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16.0dip"
                android:background="@drawable/icon_right_allow" />
        </LinearLayout>

        <View style="@style/common_divider_line" />

        <LinearLayout
            android:id="@+id/checkversion"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/selector_common_white_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:layout_weight="1.0"
                android:text="@string/checkversion"
                android:textColor="@color/c2"
                android:textSize="16.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16.0dip"
                android:background="@drawable/icon_right_allow" />
        </LinearLayout>

        <View style="@style/common_divider_line" />

        <LinearLayout
            android:id="@+id/ll_my_about_we"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/selector_common_white_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:layout_weight="1.0"
                android:text="@string/ll_my_about_we"
                android:textColor="@color/c2"
                android:textSize="16.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16.0dip"
                android:background="@drawable/icon_right_allow" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginBottom="32.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/bg_my_btn_yellow"
        android:gravity="center"
        android:text="退出登录"
        android:textColor="@color/c1"
        android:textSize="16.0sp"
        android:visibility="invisible" />

</LinearLayout>